test/files/neg/t10678.scala

trait T

trait U <: T

class C <: T {
}

object O <: T {
}
